--- a/views/counselor/student_info_conselor.ejs
+++ b/views/counselor/student_info_conselor.ejs
@@ -183,7 +183,7 @@
       <!-- <p class="fw-bold">Counselor Dashboard</p> -->
       <div class="nav-links">
         <div id="my-sections" class="active">Home</div>
-        <div id="reminders">Learning Plan</div>
+        <div id="reminders"><a href="/counselor_dashboard/student_info/learning_plan/<%= student.userID %>">Learning Plan</a></div>
       </div>
       <div class="dropdown">
         <button class="btn btn-light dropdown-toggle" type="button" id="settingsDropdown" data-bs-toggle="dropdown" aria-expanded="false">⚙️</button>
