--- a/views/counselor/learning_plan.ejs
+++ b/views/counselor/learning_plan.ejs
@@ -195,7 +195,7 @@
         <div class="left-section">
           <p class="sections-label">Learning Plans</p>
           <!-- Add button for adding a new learning plan -->
-          <a href="/add_learning_plan" class="btn btn-primary">Add Learning Plan</a>
+          <a href="/counselor_dashboard/student_info/learning_plan/add_learning_plan/<%= studentID %>" class="btn btn-primary">Add Learning Plan</a>
   
           <!-- Display Learning Plans -->
           <div class="section-card-list">
