--- a/views/counselor/student_info_conselor.ejs
+++ b/views/counselor/student_info_conselor.ejs
@@ -197,9 +197,10 @@
     <div class="content">
       <!-- Left Section Cards -->
       <div class="left-section">
-        <p class="sections-label"><%= student.name %>: </p>
+        <p class="sections-label"><%= student.name %></p>
 
         <p class="sections-label">Progress Report: </p>
+        <img src="/graphics/image.png" alt="Assignment Image" style="width: 800px;height:500px;">
       </div>
     </div>  
 
