--- a/views/parent/parent_dashboard.ejs
+++ b/views/parent/parent_dashboard.ejs
@@ -171,7 +171,7 @@
         <h2 class="section-title">Welcome, <%= parent.name %> !</h2>
         <p class="sections-label">Student name: <%= students.name %></p>
         <p class="sections-label">Progress Report </p>
-      </div>
+        <img src="/graphics/image.png" alt="Assignment Image" style="width: 800px;height:500px;">
     </div>  
 
         <!-- <ul class="section-card-list">
