--- a/views/student/student_feedback.ejs
+++ b/views/student/student_feedback.ejs
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Bundle (includes Popper.js) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/student/css/header.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -15,46 +16,6 @@
             height: 100vh;
             display: flex;
             flex-direction: column;
-        }
-        .dashboard {
-            background: white;
-            border-radius: 10px;
-            padding: 20px;
-            width: 100%;
-            height: 100%;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-        }
-        .dashboard h2 {
-            margin: 4%;
-        }
-        .header {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: #a7c7e7;
-            padding: 10px;
-            border-radius: 8px;
-            font-size: 20px;
-        }
-        .nav-links {
-            display: flex;
-            gap: 300px;
-        }
-        .nav-links .active{
-            background: #bfd6ed;
-            border-radius: 5px;
-        }
-        .nav-links div {
-            padding: 5px;
-            color: black;
-            font-weight: bold;
-        }
-        .nav-links div:hover {
-            background: #bfd6ed;
-            border-radius: 5px;
         }
         .content {
             padding-top: 20px;
