--- a/views/counselor/student_info_conselor.ejs
+++ b/views/counselor/student_info_conselor.ejs
@@ -182,7 +182,9 @@
       <button class="btn btn-light" id="back">&#8592;</button>
       <!-- <p class="fw-bold">Counselor Dashboard</p> -->
       <div class="nav-links">
-        <div id="my-sections" class="active">Home</div>
+        <div class="home-button">
+          <a href="/counselor_dashboard">Home</a>
+        </div>
         <div id="reminders"><a href="/counselor_dashboard/student_info/learning_plan/<%= student.userID %>">Learning Plan</a></div>
       </div>
       <div class="dropdown">
