working learning plan

--- a/views/teacher/upload.ejs
+++ b/views/teacher/upload.ejs
@@ -36,7 +36,7 @@
         <div class="nav-links">
           <div id="my-sections">Student Status</div>
           <div id="uploads" class="active">Uploads</div>
-          <div id="reminders">Learning plan</div>
+          <div id="plans">Learning plan</div>
         </div>
         <div class="dropdown">
           <button class="btn btn-light dropdown-toggle" type="button" id="settingsDropdown" data-bs-toggle="dropdown" aria-expanded="false">⚙️</button>
