--- a/views/teacher/coming_soon.ejs
+++ b/views/teacher/coming_soon.ejs
@@ -36,9 +36,9 @@
         <div class="header">
             <button class="btn btn-light" id="back">&#8592;</button>
             <div class="nav-links">
-                <div id="my-sections" class="active">Student Status</div>
+                <div id="my-sections">Student Status</div>
                 <div id="uploads">Uploads</div>
-                <div id="reminders">Learning plan</div>
+                <div id="plans" class="active">Learning plan</div>
             </div>
             <div class="dropdown">
                 <button class="btn btn-light dropdown-toggle" type="button" id="settingsDropdown" data-bs-toggle="dropdown" aria-expanded="false">⚙️</button>
@@ -53,4 +53,22 @@
             </div>
         </div>
     </div>  
+    <script>
+        document.getElementById("my-sections").addEventListener("click", () => {
+            window.location.href = "/teacher_dashboard/student_info/<%= studentid %>/<%= student.name %>";
+        });
+        document.getElementById("uploads").addEventListener("click", () => {
+            window.location.href="/teacher_dashboard/uploads/<%= studentid %>"
+        });
+        document.getElementById("plans").addEventListener("click", () => {
+            window.location.href="/teacher_dashboard/learning_plan/<%= studentid %>"
+        });
+        document.getElementById("back").addEventListener("click", function() {
+            window.location.href = "/teacher_dashboard";
+        });
+        document.getElementById("logout").addEventListener("click", function() {
+            localStorage.removeItem('token'); // Remove the token
+            window.location.href = "/login";  // Redirect to login page
+        });
+    </script>
 </body>
