--- a/views/counselor/student_info_conselor.ejs
+++ b/views/counselor/student_info_conselor.ejs
@@ -180,12 +180,9 @@
     <!-- ---------- Header ---------- -->
     <div class="header">
       <button class="btn btn-light" id="back">&#8592;</button>
-      <!-- <p class="fw-bold">Counselor Dashboard</p> -->
       <div class="nav-links">
-        <div class="home-button">
-          <a href="/counselor_dashboard">Home</a>
-        </div>
-        <div id="reminders"><a href="/counselor_dashboard/student_info/learning_plan/<%= student.userID %>">Learning Plan</a></div>
+        <div id="home-button" class="active">Home</div>
+        <div id="plans">Learning plan</div>
       </div>
       <div class="dropdown">
         <button class="btn btn-light dropdown-toggle" type="button" id="settingsDropdown" data-bs-toggle="dropdown" aria-expanded="false">⚙️</button>
@@ -404,7 +401,14 @@
         });
     });
 
-    document.getElementById("logout").addEventListener("click",()=>{localStorage.removeItem("token");window.location.href="/login"});
+    document.getElementById("student-details").addEventListener("click",()=>{
+      window.location.href="/counselor_dashboard"});
+    document.getElementById("plans").addEventListener("click",()=>{
+      window.location.href="/counselor_dashboard/student_info/learning_plan/<%= student.userID %>"});
+    document.getElementById("logout").addEventListener("click",()=>{
+      localStorage.removeItem("token");
+      window.location.href="/login"
+    });
     document.getElementById("back").addEventListener("click", function() {window.location.href = "/counselor_dashboard";});
   </script>
 </body>
